Feat: add todo subtitle, manage flight todo presets